[project]
name = "manage-breast-screening"
version = "0.1.0"
description = ""
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.14,<4.0.0"
readme = "README.md"
license = { text = "MIT" }
dependencies = [
  "django (>=5.1.7,<6.0.0)",
  "dotenv (>=0.9.9,<0.10.0)",
  "gunicorn (>=23.0.0,<24.0.0)",
  "jinja2 (>=3.1.6,<4.0.0)",
  "factory-boy (>=3.3.3)",
  "whitenoise[brotli] (>=6.9.0,<7.0.0)",
  "nhsuk-frontend-jinja (>=0.5.0,<0.6.0)",
  "python-dateutil (>=2.9.0.post0,<3.0.0)",
  "psycopg[binary] (>=3.2.7,<4.0.0)",
  "azure-identity (>=1.23.0,<2.0.0)",
  "mesh-client (>=3.2.3,<4.0.0)",
  "azure-storage-blob (>=12.25.1,<13.0.0)",
  "pandas (>=2.3.0,<3.0.0)",
  "azure-storage-queue (>=12.13.0,<13.0.0)",
  "pyyaml (>=6.0.2,<7.0.0)",
  "rules (>=3.5,<4.0)",
  "authlib (>=1.6.1,<2.0.0)",
  "django-qsessions (>=2.0.0,<3.0.0)",
  "business-python (>=2.1.0,<3.0.0)",
  "django-extensions (>=4.1,<5.0)",
  "azure-monitor-opentelemetry (>=1.8.1,<2.0.0)",
]

[dependency-groups]
dev = [
  "pytest>=8.4.1,<9",
  "pytest-django>=4.11.1,<5",
  "time-machine>=2.17.0,<3",
  "pytest-playwright>=0.7.0,<0.8",
  "ipdb>=0.13.13,<0.14",
  "axe-playwright-python>=0.1.5,<0.2",
  "ruff>=0.14.1,<0.15",
  "django-debug-toolbar>=6.0.0,<7",
  "requests-mock>=1.12.1,<2",
  "pytest-cov>=7.0.0,<8",
  "djlint>=1.36.4,<2",
  "jsonschema>=4.25.1,<5",
]

[tool.uv]
required-version = ">=0.9.7"
package = false

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "manage_breast_screening.config.settings_test"
python_files = "tests.py test_*.py *_tests.py"
addopts = "--doctest-modules"
markers = [
  "system: mark a test as a system test",
  "integration: mark a test as an integration test",
  "skip_insights_mock: don't auto use the mock_insights_logging fixture",
]

[tool.ruff]
exclude = ["*/migrations/*.py"]

# On top of the defaults (`E4`, E7`, `E9`, and `F`), enable isort (`I`)
lint.select = ["E4", "E7", "E9", "F", "I"]

[tool.coverage.run]
omit = [
  "*/migrations/*",
  "manage_breast_screening/config/*",
  "*/tests/*",
  "manage_breast_screening/core/system_test_setup.py",
  "*/admin.py",
  "manage.py",
]

[tool.djlint]
ignore = "T003"
